<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:custom="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="io.bluephoenix.imagewall.features.register.RegisterActivity"
    tools:ignore="MissingPrefix">

    <android.support.v7.widget.Toolbar
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorPrimary"
        android:theme="@style/ToolbarStyle"
        android:text="@string/register_activity_name"
        app:titleTextColor="@color/white">

    </android.support.v7.widget.Toolbar>

    <ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:custom="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="8dp">

        <!-- Prevents the edit text from having focus when the activity starts.
         android:focusableInTouchMode="true" on the parent layout. -->
        <android.support.constraint.ConstraintLayout
            android:id="@+id/constraintRegisterLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusableInTouchMode="true"
            tools:context="io.bluephoenix.imagewall.features.login.LoginActivity">

            <EditText
                android:id="@+id/editTextRegisterEmail"
                android:layout_width="@dimen/width_edit_box"
                android:layout_height="@dimen/height_edit_box"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="48dp"
                android:background="@drawable/edit_text_selector"
                android:drawableLeft="@drawable/ic_email_grey_200_18dp"
                android:drawablePadding="16dp"
                android:drawableStart="@drawable/ic_email_grey_200_18dp"
                android:ems="10"
                android:hint="@string/edit_text_email_hint"
                android:inputType="textEmailAddress"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:textColor="@color/editTextText"
                android:textColorHint="@color/editTextHint"
                android:textSize="14sp"
                android:theme="@style/EditTextOverride"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>

            <EditText
                android:id="@+id/editTextRegisterPassword"
                android:layout_width="@dimen/width_edit_box"
                android:layout_height="@dimen/height_edit_box"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="4dp"
                android:background="@drawable/edit_text_selector"
                android:drawableLeft="@drawable/ic_vpn_key_grey_200_18dp"
                android:drawablePadding="16dp"
                android:drawableStart="@drawable/ic_vpn_key_grey_200_18dp"
                android:ems="10"
                android:hint="@string/edit_text_password_hint"
                android:inputType="textPassword"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:textColor="@color/editTextText"
                android:textColorHint="@color/editTextHint"
                android:textSize="14sp"
                android:theme="@style/EditTextOverride"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.495"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txtRegisterEmailError"/>


            <EditText
                android:id="@+id/editTextRegisterRetypePassword"
                android:layout_width="@dimen/width_edit_box"
                android:layout_height="@dimen/height_edit_box"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="4dp"
                android:background="@drawable/edit_text_selector"
                android:drawableLeft="@drawable/ic_vpn_key_grey_200_18dp"
                android:drawablePadding="16dp"
                android:drawableStart="@drawable/ic_vpn_key_grey_200_18dp"
                android:ems="10"
                android:hint="@string/edit_text_password_retype_hint"
                android:inputType="textPassword"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:textColor="@color/editTextText"
                android:textColorHint="@color/editTextHint"
                android:textSize="14sp"
                android:theme="@style/EditTextOverride"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txtRegisterPasswordError"/>

            <ImageView
                android:id="@+id/dividerFirst"
                android:layout_width="@dimen/divider_width"
                android:layout_height="1dp"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="4dp"
                android:contentDescription="@string/content_description_divider"
                android:layerType="software"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txtRegisterPasswordRetypeError"
                app:srcCompat="@drawable/divider"/>

            <EditText
                android:id="@+id/editTextName"
                android:layout_width="@dimen/width_edit_box"
                android:layout_height="@dimen/height_edit_box"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="24dp"
                android:background="@drawable/edit_text_selector"
                android:drawableLeft="@drawable/ic_person_grey_200_18dp"
                android:drawablePadding="16dp"
                android:drawableStart="@drawable/ic_person_grey_200_18dp"
                android:ems="10"
                android:hint="@string/edit_text_name_hint"
                android:inputType="textPersonName|textCapSentences"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:textColor="@color/editTextText"
                android:textColorHint="@color/editTextHint"
                android:textSize="14sp"
                android:theme="@style/EditTextOverride"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/dividerFirst"/>

            <EditText
                android:id="@+id/editTextWebsite"
                android:layout_width="@dimen/width_edit_box"
                android:layout_height="@dimen/height_edit_box"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="4dp"
                android:background="@drawable/edit_text_selector"
                android:drawableLeft="@drawable/ic_web_asset_grey_200_18dp"
                android:drawablePadding="16dp"
                android:drawableStart="@drawable/ic_web_asset_grey_200_18dp"
                android:ems="10"
                android:hint="@string/edit_text_website_hint"
                android:inputType="textUri"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:textColor="@color/editTextText"
                android:textColorHint="@color/editTextHint"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txtRegisterNameError"/>

            <ImageView
                android:id="@+id/spacer"
                android:layout_width="6dp"
                android:layout_height="52dp"
                android:layout_marginTop="8dp"
                android:contentDescription="@string/content_description_login_space"
                app:layout_constraintBottom_toBottomOf="@+id/editTextWebsite"
                app:layout_constraintStart_toEndOf="@+id/editTextWebsite"
                app:layout_constraintTop_toTopOf="@+id/editTextWebsite"
                custom:srcCompat="@color/white"/>

            <!-- The custom width attr in these views refers to the min width. The view
                 will not be less than 114 dp. -->
            <io.bluephoenix.imagewall.views.CustomBtn
                android:id="@+id/registerBtn"
                android:layout_width="126dp"
                android:layout_height="@dimen/height_button"
                android:layout_marginBottom="24dp"
                android:layout_marginTop="18dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/spacer"
                app:layout_constraintTop_toBottomOf="@+id/editTextWebsite"
                custom:backgroundColor="@color/colorPrimary"
                custom:height="@dimen/height_button"
                custom:padding="6dp"
                custom:shadowColor="@color/colorPrimaryShadow"
                custom:shadowOffset="2dp"
                custom:shadowRadiusBlur="1dp"
                custom:shadowRadiusBlurSelected="3dp"
                custom:text="@string/register_button"
                custom:textColor="@color/white"
                custom:textSize="11sp"
                custom:width="126dp"
                tools:ignore="SmallSp">
            </io.bluephoenix.imagewall.views.CustomBtn>

            <Button
                android:id="@+id/countryBtn"
                style="@style/Base.Widget.AppCompat.Button.Borderless"
                android:layout_width="@dimen/width_edit_box_country"
                android:layout_height="@dimen/height_edit_box"
                android:layout_gravity="start"
                android:layout_marginTop="24dp"
                android:background="@drawable/edit_text_selector"
                android:drawableLeft="@drawable/ic_language_grey_200_18dp"
                android:drawablePadding="16dp"
                android:drawableStart="@drawable/ic_language_grey_200_18dp"
                android:paddingEnd="16dp"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:paddingStart="16dp"
                android:text="@string/fake_edit_text_btn_country_hint"
                android:textAlignment="textStart"
                android:textAllCaps="false"
                android:textColor="@color/editTextHint"
                android:textSize="14sp"
                app:layout_constraintStart_toStartOf="@+id/editTextWebsite"
                app:layout_constraintTop_toBottomOf="@+id/editTextWebsite"/>

            <TextView
                android:id="@+id/txtRegisterEmailError"
                android:layout_width="@dimen/width_edit_box"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="4dp"
                android:textAlignment="center"
                android:textColor="@color/error"
                android:textSize="12sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editTextRegisterEmail"/>

            <TextView
                android:id="@+id/txtRegisterPasswordError"
                android:layout_width="@dimen/width_edit_box"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="4dp"
                android:textAlignment="center"
                android:textColor="@color/error"
                android:textSize="12sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editTextRegisterPassword"/>

            <TextView
                android:id="@+id/txtRegisterNameError"
                android:layout_width="@dimen/width_edit_box"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="4dp"
                android:textAlignment="center"
                android:textColor="@color/error"
                android:textSize="12sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editTextName"/>

            <TextView
                android:id="@+id/txtRegisterPasswordRetypeError"
                android:layout_width="@dimen/width_edit_box"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="4dp"
                android:textAlignment="center"
                android:textColor="@color/error"
                android:textSize="12sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editTextRegisterRetypePassword"/>

        </android.support.constraint.ConstraintLayout>
    </ScrollView>
</LinearLayout>